# MTFF-Net

./: CITATION.cff  LICENSE  README.md  pyproject.toml
configs/: default.yaml
data/: README.md
data/sample/: sample_monitoring.csv
examples/: quickstart.py
scripts/: build_dataset.py  evaluate.py  train.py
src/mtff_net/: __init__.py  config.py  data.py  metrics.py  models.py  spatial.py  train.py
tests/: test_smoke.py
